Fix icons align

--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -291,7 +291,7 @@ iframe {
       'opsz' #{$icons-optical};
   }
   width: 1em;
-  scale: 1.4 + ($icons-weight - 100) * (1.125 - 1.4) / (700 - 100);
+  scale: $icons-scale;
 }
 .icon--txt {
   @include font-base-bold;
