--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -142,6 +142,7 @@ $icons-weight:  $styles-icons-weight    !default;
 $icons-grade:   $styles-icons-grade     !default;
 $icons-optical: $styles-icons-optical   !default;
 $icons-style:   $styles-icons-style     !default;
+$icons-scale:   1.4 + ($icons-weight - 100) * (1.125 - 1.4) / (700 - 100);
 
 $linejoin:     if($icons-style == 'rounded', 'round', 'miter')         !default;
 $stroke-width: (25 + ($icons-weight - 100) * (120 - 25) / (700 - 100)) !default;
