--- a/assets/css/boxes/_item.scss
+++ b/assets/css/boxes/_item.scss
@@ -202,7 +202,7 @@
 }
 .box__icon--side {
   order: var(--icon-side-order, -1);
-  transform: translateY(($line-height-title - $font-size-title) * 1em / 2);
+  translate: 0 .125em;
 }
 .box__icon--bottom {
   display: flex;
