--- a/assets/css/md/_heading.scss
+++ b/assets/css/md/_heading.scss
@@ -1,6 +1,6 @@
 .md__heading {
   display: flex;
-  // align-items: baseline;
+  align-items: baseline;
   justify-content: var(--align, center);
   gap: .25em;
   .md__heading-index {
