--- a/assets/css/md/_lists.scss
+++ b/assets/css/md/_lists.scss
@@ -23,6 +23,7 @@
       display: grid;
       grid-column: 1 / -1;
       grid-template-columns: subgrid;
+      align-items: baseline;
       --li-icon-order: 0;
       // display: table-row;
       // --li-pt: .75rem;
